# See https://packaging.python.org/en/latest/overview/

[build-system]
requires = ["setuptools==83.*"]
build-backend = "setuptools.build_meta"

[project]
name = "powergslb"
dynamic = ["version"]
description = "PowerGSLB is a DNS-based Global Server Load Balancing (GSLB) solution"
urls = { homepage = "https://github.com/acudovs/powergslb" }
authors = [{ name = "Aleksejs Cudovs", email = "aleksejs.cudovs@gmail.com" }]
license = "MIT"
scripts = { powergslb = "powergslb.main:PowerGSLB.main" }
requires-python = ">=3.12"
dependencies = [
    "icmplib == 3.*",
    "legacycrypt == 0.*",
    "maxminddb == 3.*",
    "mysql-connector-python == 9.*",
    "netaddr == 1.*",
    # "systemd-python"  # C extension; requires gcc, python3-devel, systemd-devel; provided by system site-packages.
]

# See https://peps.python.org/pep-0735/
[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["mypy == 2.*", "pylint == 4.*"]
test = ["coverage == 7.*", "pytest == 9.*", "requests == 2.*"]

[tool.setuptools.dynamic]
version = { attr = "powergslb.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

# See https://peps.python.org/pep-0561/#packaging-type-information
[tool.setuptools.package-data]
"*" = ["py.typed"]
"powergslb.resources" = ["admin/**"]

# See https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

# See https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true

# See https://pylint.pycqa.org/en/stable/user_guide/configuration/all-options.html
[tool.pylint.options]
disable = ["duplicate-code"]
enable = ["useless-suppression"]
ignored-modules = ["legacycrypt"]
max-args = 15
max-branches = 15
max-attributes = 20
max-line-length = 120
max-locals = 20
max-positional-arguments = 15
min-public-methods = 0
max-public-methods = 25
py-version = 3.12

# See https://docs.pytest.org/en/stable/reference/reference.html
[tool.pytest.ini_options]
pythonpath = "src"
log_level = "DEBUG"
filterwarnings = ["ignore::urllib3.exceptions.InsecureRequestWarning"]
